<resources>
    <string name="app_name">SYM_Labo02</string>
    <string name="main_asynchrone_btn">Asynchrone</string>
    <string name="main_title">Type de transmission</string>
    <string name="asynchonous_received_data">Données reçues</string>
    <string name="asynchrone_actionbar_title">Transmission asynchrone</string>
    <string name="asynchronous_send">Envoyer</string>
    <string name="asyncronous_text_to_send">Texte à envoyer</string>
    <string name="asynchonous_cannot_be_empty">Ne peut pas être vide</string>
    <string name="main_delayed_btn">Différée</string>
    <string name="delayed_actionbar_title">Transmission différée</string>
    <string name="main_json_btn">JSON</string>
    <string name="json_actionbar_title">Transmission json</string>
    <string name="json_first_name">Prénom</string>
    <string name="json_last_name">Nom</string>
    <string name="json_age">Age</string>
    <string name="json_toast_send_successfully">L\'utilisateur a bien été envoyé</string>
    <string name="json_cannot_be_empty">Ne peut pas être vide</string>
    <string name="xml_middle_name">Deuxième prénom</string>
    <string name="xml_gender">Sexe</string>
    <string name="xml_female">Femme</string>
    <string name="xml_male">Homme</string>
    <string name="xml_phoneNumber">Numéro de téléphone</string>
    <string name="main_xml_btn">XML</string>
    <string name="xml_addInDirectory">Ajouter dans l\'anunuaire</string>
    <string name="xml_mandatoryField">Champ obligatoire</string>
    <string name="xml_numberType">Type de numéro</string>
    <string name="xml_phoneNumberOptional">Numéro de téléphone (Optionel)</string>
    <string name="xml_action_title">Transmission XML</string>
    <string name="xml_toast_empty_directory">Annuaire vide, rien à envoyer</string>
    <string name="xml_toast_add_new_person">Nouvelle personne ajoutée dans l\'annuaire</string>
    <string name="graphql_AuthorChoice">1. Choix d\'un auteur:</string>
    <string name="graphql_Posts">2. Articles de l\'auteur</string>
    <string name="main_graphQl_btn">GraphQL</string>
    <string name="post_item_title">Titre</string>
    <string name="post_item_description">Description</string>
    <string name="post_item_date">Date</string>
    <string name="graphql_toast_authors_load">Liste des auteurs chargée !</string>
    <string name="graphql_toast_posts_load">Liste des articles chargée !</string>
    <string name="graphql_title">Transmission GraphQL</string>
    <string name="main_compressed_btn">Compressée</string>
    <string name="compressed_actionbar_title">Transmission compressée</string>
    <string name="compressed_first_name">Prénom</string>
    <string name="compressed_last_name">Nom</string>
    <string name="compressed_age">Age</string>
    <string name="compressed_toast_send_successfully">L\'utilisateur a bien été envoyé</string>
    <string name="compressed_cannot_be_empty">Ne peut pas être vide</string>
</resources>