<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ch.heigvd.iict.sym.lab.activities.XmlActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/json_first_name" />

        <EditText
            android:id="@+id/xml_etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/json_last_name" />

        <EditText
            android:id="@+id/xml_etFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/xml_middle_name" />

        <EditText
            android:id="@+id/xml_etMiddleName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/xml_gender" />

        <RadioGroup
            android:id="@+id/xml_rgGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/xml_rbFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xml_female" />

            <RadioButton
                android:id="@+id/xml_rbMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xml_male" />
        </RadioGroup>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/xml_phone_number" />

        <EditText
            android:id="@+id/xml_etPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone" />

        <Spinner
            android:id="@+id/xml_spPhoneType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/xml_btnSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="8dp"
            android:text="@string/asynchronous_send" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>